Version 2.02.96 - 
================================
  Improve thin_check option passing and use configured path.
  Add --with-thin-check configure option for path to thin_check.
  Detect lvm binary path in lvmetad udev rules.
  Fix error message when pvmove LV activation fails with name already in use.
  Better structure layout for device_info in dev_subsystem_name().
  Change message severity for creation of VG over uninitialised devices.
  Fix error path for failing toolcontext creation.
  Fix warn msg for thin pool chunk size and update man for chunksize (2.02.89).

Version 2.02.95 - 6th March 2012
================================
  If unspecified, adjust thin pool metadata and chunk size to fit into 128MB.
  Print just warning on thin pool check callback path for failing check.
  Always use 64bit arithmetic with VG extent_size expression.
  Validate udev structures in _insert_udev_dir().
  Take repeatable --major --minor with pvscan --cache instead of major:minor.
  Scan all devices for lvmetad if 'pvscan --cache' used without device list.
  Populate lvmcache from lvmetad before displaying PVs in pvscan. (2.02.94)
  Suppress incorrect -n pvscan warning now always displayed. (2.02.94)

Version 2.02.94 - 3rd March 2012
================================
  Add support to execute thin_check with each de/active of thin pool.
  Fix automatic estimation of metadata device size for thin pool.
  Test for alloc fail from _alloc_pv_segment() in _extend_pv().
  Check for alloc fail from get_segtype_from_string() in _lvcreate_params().
  Add _rimage as reserved suffix to lvm.8 man page.
  Improve error logging from mpath filter.
  Check for allocation failure in hold_lock() in clvmd.
  Use set_lv() (wipe initial 4KiB) for non zeroed thin volume.
  Allow cluster mirrors to handle the absence of the checkpoint lib (libSaCkpt).
  Revert free of allocated segtype in init segment error path (2.02.89).
  Test dm_hash_insert() failures in filter-persistent.c and fid_add_mda().